gr8_parser.output
   0  $accept : file $end

   1  file : decls

   2  decl : func
   3       | var

   4  decls : decls decl
   5        | decl

   6  instrs : instrs instr
   7         | instr

   8  block : tBLOCKBEGIN instrs tBLOCKEND
   9        | tBLOCKBEGIN decls tBLOCKEND
  10        | tBLOCKBEGIN decls instrs tBLOCKEND

  11  func : type tFUNCTION tIDENTIFIER
  12       | type tFUNCTION tIDENTIFIER tUSES vars
  13       | qualif type tFUNCTION tIDENTIFIER
  14       | qualif type tFUNCTION tIDENTIFIER tUSES vars
  15       | tPROCEDURE tIDENTIFIER
  16       | tPROCEDURE tIDENTIFIER tUSES vars
  17       | qualif tPROCEDURE tIDENTIFIER
  18       | qualif tPROCEDURE tIDENTIFIER tUSES vars
  19       | tDEFINE type tFUNCTION tIDENTIFIER tAS block
  20       | tDEFINE type tFUNCTION tIDENTIFIER tON vars tAS block
  21       | tDEFINE qualif type tFUNCTION tIDENTIFIER tAS block
  22       | tDEFINE qualif type tFUNCTION tIDENTIFIER tON vars tAS block
  23       | tDEFINE tPROCEDURE tIDENTIFIER tAS block
  24       | tDEFINE tPROCEDURE tIDENTIFIER tON vars tAS block
  25       | tDEFINE qualif tPROCEDURE tIDENTIFIER tAS block
  26       | tDEFINE qualif tPROCEDURE tIDENTIFIER tON vars tAS block

  27  qualif : tPUBLIC
  28         | tUSE

  29  call : tDO tIDENTIFIER
  30       | tUSE args tFOR tIDENTIFIER

  31  args : expr
  32       | args ',' expr

  33  var : type tIDENTIFIER
  34      | qualif type tIDENTIFIER
  35      | type tIDENTIFIER '(' tINITIALLY expr ')'
  36      | qualif type tIDENTIFIER '(' tINITIALLY expr ')'

  37  small : 's'
  38        | 's' small

  39  huge : 'h'
  40       | 'h' huge

  41  fake : 'f'
  42       | 'f' fake

  43  type : 's'
  44       | small 'f'
  45       | 'h'
  46       | huge 'f'
  47       | 'n'
  48       | fake 'n'

  49  instr : expr
  50        | tASSIGN expr tTO lval
  51        | tSTOP
  52        | tAGAIN
  53        | tSTOP tINTEGER
  54        | tAGAIN tINTEGER
  55        | tRETURN expr
  56        | tTWEET expr
  57        | tPOST expr
  58        | cond
  59        | sweep

  60  cond : tIF expr tTHEN block
  61       | tIF expr tTHEN block elfs

  62  elfs : tELSE block
  63       | tELIF expr tTHEN block
  64       | tELIF expr tTHEN block elfs

  65  sweep : tSWEEP lval tFROM expr tTO expr tDO block
  66        | tSWEEP lval tFROM expr tTO expr tBY expr tDO block

  67  vars : var
  68       | vars ',' var

  69  strs : tSTRING
  70       | strs tSTRING

  71  expr : tINTEGER
  72       | strs
  73       | tDOUBLE
  74       | tNULL
  75       | '+' expr
  76       | '-' expr
  77       | expr '+' expr
  78       | expr '-' expr
  79       | expr '*' expr
  80       | expr '/' expr
  81       | expr '%' expr
  82       | expr '<' expr
  83       | expr '>' expr
  84       | expr '=' expr
  85       | '!' expr
  86       | expr tAND expr
  87       | expr tOR expr
  88       | '(' expr ')'
  89       | lval
  90       | lval '?'
  91       | tINPUT
  92       | expr tOBJECTS
  93       | call

  94  lval : tIDENTIFIER
  95       | tCELL expr tAT lval
  96       | tCELL expr tAT '(' expr ')'

state 0
	$accept : . file $end  (0)

	tPUBLIC  shift 1
	tUSE  shift 2
	tDEFINE  shift 3
	tPROCEDURE  shift 4
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error

	file  goto 9
	var  goto 10
	func  goto 11
	decl  goto 12
	qualif  goto 13
	decls  goto 14
	type  goto 15
	small  goto 16
	huge  goto 17
	fake  goto 18


state 1
	qualif : tPUBLIC .  (27)

	.  reduce 27


state 2
	qualif : tUSE .  (28)

	.  reduce 28


state 3
	func : tDEFINE . type tFUNCTION tIDENTIFIER tAS block  (19)
	func : tDEFINE . type tFUNCTION tIDENTIFIER tON vars tAS block  (20)
	func : tDEFINE . qualif type tFUNCTION tIDENTIFIER tAS block  (21)
	func : tDEFINE . qualif type tFUNCTION tIDENTIFIER tON vars tAS block  (22)
	func : tDEFINE . tPROCEDURE tIDENTIFIER tAS block  (23)
	func : tDEFINE . tPROCEDURE tIDENTIFIER tON vars tAS block  (24)
	func : tDEFINE . qualif tPROCEDURE tIDENTIFIER tAS block  (25)
	func : tDEFINE . qualif tPROCEDURE tIDENTIFIER tON vars tAS block  (26)

	tPUBLIC  shift 1
	tUSE  shift 2
	tPROCEDURE  shift 19
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error

	qualif  goto 20
	type  goto 21
	small  goto 16
	huge  goto 17
	fake  goto 18


state 4
	func : tPROCEDURE . tIDENTIFIER  (15)
	func : tPROCEDURE . tIDENTIFIER tUSES vars  (16)

	tIDENTIFIER  shift 22
	.  error


state 5
	small : 's' .  (37)
	small : 's' . small  (38)
	type : 's' .  (43)

	's'  shift 23
	tIDENTIFIER  reduce 43
	tFUNCTION  reduce 43
	'f'  reduce 37

	small  goto 24


state 6
	huge : 'h' .  (39)
	huge : 'h' . huge  (40)
	type : 'h' .  (45)

	'h'  shift 25
	tIDENTIFIER  reduce 45
	tFUNCTION  reduce 45
	'f'  reduce 39

	huge  goto 26


state 7
	fake : 'f' .  (41)
	fake : 'f' . fake  (42)

	'f'  shift 7
	'n'  reduce 41

	fake  goto 27


state 8
	type : 'n' .  (47)

	.  reduce 47


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	decl : var .  (3)

	.  reduce 3


state 11
	decl : func .  (2)

	.  reduce 2


state 12
	decls : decl .  (5)

	.  reduce 5


state 13
	func : qualif . type tFUNCTION tIDENTIFIER  (13)
	func : qualif . type tFUNCTION tIDENTIFIER tUSES vars  (14)
	func : qualif . tPROCEDURE tIDENTIFIER  (17)
	func : qualif . tPROCEDURE tIDENTIFIER tUSES vars  (18)
	var : qualif . type tIDENTIFIER  (34)
	var : qualif . type tIDENTIFIER '(' tINITIALLY expr ')'  (36)

	tPROCEDURE  shift 28
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error

	type  goto 29
	small  goto 16
	huge  goto 17
	fake  goto 18


state 14
	file : decls .  (1)
	decls : decls . decl  (4)

	tPUBLIC  shift 1
	tUSE  shift 2
	tDEFINE  shift 3
	tPROCEDURE  shift 4
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	$end  reduce 1

	var  goto 10
	func  goto 11
	decl  goto 30
	qualif  goto 13
	type  goto 15
	small  goto 16
	huge  goto 17
	fake  goto 18


state 15
	func : type . tFUNCTION tIDENTIFIER  (11)
	func : type . tFUNCTION tIDENTIFIER tUSES vars  (12)
	var : type . tIDENTIFIER  (33)
	var : type . tIDENTIFIER '(' tINITIALLY expr ')'  (35)

	tIDENTIFIER  shift 31
	tFUNCTION  shift 32
	.  error


state 16
	type : small . 'f'  (44)

	'f'  shift 33
	.  error


state 17
	type : huge . 'f'  (46)

	'f'  shift 34
	.  error


state 18
	type : fake . 'n'  (48)

	'n'  shift 35
	.  error


state 19
	func : tDEFINE tPROCEDURE . tIDENTIFIER tAS block  (23)
	func : tDEFINE tPROCEDURE . tIDENTIFIER tON vars tAS block  (24)

	tIDENTIFIER  shift 36
	.  error


state 20
	func : tDEFINE qualif . type tFUNCTION tIDENTIFIER tAS block  (21)
	func : tDEFINE qualif . type tFUNCTION tIDENTIFIER tON vars tAS block  (22)
	func : tDEFINE qualif . tPROCEDURE tIDENTIFIER tAS block  (25)
	func : tDEFINE qualif . tPROCEDURE tIDENTIFIER tON vars tAS block  (26)

	tPROCEDURE  shift 37
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error

	type  goto 38
	small  goto 16
	huge  goto 17
	fake  goto 18


state 21
	func : tDEFINE type . tFUNCTION tIDENTIFIER tAS block  (19)
	func : tDEFINE type . tFUNCTION tIDENTIFIER tON vars tAS block  (20)

	tFUNCTION  shift 39
	.  error


state 22
	func : tPROCEDURE tIDENTIFIER .  (15)
	func : tPROCEDURE tIDENTIFIER . tUSES vars  (16)

	tUSES  shift 40
	$end  reduce 15
	tINTEGER  reduce 15
	tDOUBLE  reduce 15
	tNULL  reduce 15
	tIDENTIFIER  reduce 15
	tSTRING  reduce 15
	tPUBLIC  reduce 15
	tUSE  reduce 15
	tINPUT  reduce 15
	tIF  reduce 15
	tASSIGN  reduce 15
	tSTOP  reduce 15
	tAGAIN  reduce 15
	tRETURN  reduce 15
	tTWEET  reduce 15
	tPOST  reduce 15
	tCELL  reduce 15
	tSWEEP  reduce 15
	tDO  reduce 15
	tDEFINE  reduce 15
	tPROCEDURE  reduce 15
	tBLOCKEND  reduce 15
	'!'  reduce 15
	'+'  reduce 15
	'-'  reduce 15
	'('  reduce 15
	's'  reduce 15
	'h'  reduce 15
	'f'  reduce 15
	'n'  reduce 15


state 23
	small : 's' .  (37)
	small : 's' . small  (38)

	's'  shift 23
	'f'  reduce 37

	small  goto 24


state 24
	small : 's' small .  (38)

	.  reduce 38


state 25
	huge : 'h' .  (39)
	huge : 'h' . huge  (40)

	'h'  shift 25
	'f'  reduce 39

	huge  goto 26


state 26
	huge : 'h' huge .  (40)

	.  reduce 40


state 27
	fake : 'f' fake .  (42)

	.  reduce 42


state 28
	func : qualif tPROCEDURE . tIDENTIFIER  (17)
	func : qualif tPROCEDURE . tIDENTIFIER tUSES vars  (18)

	tIDENTIFIER  shift 41
	.  error


state 29
	func : qualif type . tFUNCTION tIDENTIFIER  (13)
	func : qualif type . tFUNCTION tIDENTIFIER tUSES vars  (14)
	var : qualif type . tIDENTIFIER  (34)
	var : qualif type . tIDENTIFIER '(' tINITIALLY expr ')'  (36)

	tIDENTIFIER  shift 42
	tFUNCTION  shift 43
	.  error


state 30
	decls : decls decl .  (4)

	.  reduce 4


31: shift/reduce conflict (shift 44, reduce 33) on '('
state 31
	var : type tIDENTIFIER .  (33)
	var : type tIDENTIFIER . '(' tINITIALLY expr ')'  (35)

	'('  shift 44
	$end  reduce 33
	tINTEGER  reduce 33
	tDOUBLE  reduce 33
	tNULL  reduce 33
	tIDENTIFIER  reduce 33
	tSTRING  reduce 33
	tPUBLIC  reduce 33
	tUSE  reduce 33
	tINPUT  reduce 33
	tIF  reduce 33
	tASSIGN  reduce 33
	tSTOP  reduce 33
	tAGAIN  reduce 33
	tRETURN  reduce 33
	tTWEET  reduce 33
	tPOST  reduce 33
	tCELL  reduce 33
	tSWEEP  reduce 33
	tDO  reduce 33
	tAS  reduce 33
	tDEFINE  reduce 33
	tPROCEDURE  reduce 33
	tBLOCKEND  reduce 33
	'!'  reduce 33
	'+'  reduce 33
	'-'  reduce 33
	','  reduce 33
	's'  reduce 33
	'h'  reduce 33
	'f'  reduce 33
	'n'  reduce 33


state 32
	func : type tFUNCTION . tIDENTIFIER  (11)
	func : type tFUNCTION . tIDENTIFIER tUSES vars  (12)

	tIDENTIFIER  shift 45
	.  error


state 33
	type : small 'f' .  (44)

	.  reduce 44


state 34
	type : huge 'f' .  (46)

	.  reduce 46


state 35
	type : fake 'n' .  (48)

	.  reduce 48


state 36
	func : tDEFINE tPROCEDURE tIDENTIFIER . tAS block  (23)
	func : tDEFINE tPROCEDURE tIDENTIFIER . tON vars tAS block  (24)

	tON  shift 46
	tAS  shift 47
	.  error


state 37
	func : tDEFINE qualif tPROCEDURE . tIDENTIFIER tAS block  (25)
	func : tDEFINE qualif tPROCEDURE . tIDENTIFIER tON vars tAS block  (26)

	tIDENTIFIER  shift 48
	.  error


state 38
	func : tDEFINE qualif type . tFUNCTION tIDENTIFIER tAS block  (21)
	func : tDEFINE qualif type . tFUNCTION tIDENTIFIER tON vars tAS block  (22)

	tFUNCTION  shift 49
	.  error


state 39
	func : tDEFINE type tFUNCTION . tIDENTIFIER tAS block  (19)
	func : tDEFINE type tFUNCTION . tIDENTIFIER tON vars tAS block  (20)

	tIDENTIFIER  shift 50
	.  error


state 40
	func : tPROCEDURE tIDENTIFIER tUSES . vars  (16)

	tPUBLIC  shift 1
	tUSE  shift 2
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error

	var  goto 51
	qualif  goto 52
	vars  goto 53
	type  goto 54
	small  goto 16
	huge  goto 17
	fake  goto 18


state 41
	func : qualif tPROCEDURE tIDENTIFIER .  (17)
	func : qualif tPROCEDURE tIDENTIFIER . tUSES vars  (18)

	tUSES  shift 55
	$end  reduce 17
	tINTEGER  reduce 17
	tDOUBLE  reduce 17
	tNULL  reduce 17
	tIDENTIFIER  reduce 17
	tSTRING  reduce 17
	tPUBLIC  reduce 17
	tUSE  reduce 17
	tINPUT  reduce 17
	tIF  reduce 17
	tASSIGN  reduce 17
	tSTOP  reduce 17
	tAGAIN  reduce 17
	tRETURN  reduce 17
	tTWEET  reduce 17
	tPOST  reduce 17
	tCELL  reduce 17
	tSWEEP  reduce 17
	tDO  reduce 17
	tDEFINE  reduce 17
	tPROCEDURE  reduce 17
	tBLOCKEND  reduce 17
	'!'  reduce 17
	'+'  reduce 17
	'-'  reduce 17
	'('  reduce 17
	's'  reduce 17
	'h'  reduce 17
	'f'  reduce 17
	'n'  reduce 17


42: shift/reduce conflict (shift 56, reduce 34) on '('
state 42
	var : qualif type tIDENTIFIER .  (34)
	var : qualif type tIDENTIFIER . '(' tINITIALLY expr ')'  (36)

	'('  shift 56
	$end  reduce 34
	tINTEGER  reduce 34
	tDOUBLE  reduce 34
	tNULL  reduce 34
	tIDENTIFIER  reduce 34
	tSTRING  reduce 34
	tPUBLIC  reduce 34
	tUSE  reduce 34
	tINPUT  reduce 34
	tIF  reduce 34
	tASSIGN  reduce 34
	tSTOP  reduce 34
	tAGAIN  reduce 34
	tRETURN  reduce 34
	tTWEET  reduce 34
	tPOST  reduce 34
	tCELL  reduce 34
	tSWEEP  reduce 34
	tDO  reduce 34
	tAS  reduce 34
	tDEFINE  reduce 34
	tPROCEDURE  reduce 34
	tBLOCKEND  reduce 34
	'!'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	','  reduce 34
	's'  reduce 34
	'h'  reduce 34
	'f'  reduce 34
	'n'  reduce 34


state 43
	func : qualif type tFUNCTION . tIDENTIFIER  (13)
	func : qualif type tFUNCTION . tIDENTIFIER tUSES vars  (14)

	tIDENTIFIER  shift 57
	.  error


state 44
	var : type tIDENTIFIER '(' . tINITIALLY expr ')'  (35)

	tINITIALLY  shift 58
	.  error


state 45
	func : type tFUNCTION tIDENTIFIER .  (11)
	func : type tFUNCTION tIDENTIFIER . tUSES vars  (12)

	tUSES  shift 59
	$end  reduce 11
	tINTEGER  reduce 11
	tDOUBLE  reduce 11
	tNULL  reduce 11
	tIDENTIFIER  reduce 11
	tSTRING  reduce 11
	tPUBLIC  reduce 11
	tUSE  reduce 11
	tINPUT  reduce 11
	tIF  reduce 11
	tASSIGN  reduce 11
	tSTOP  reduce 11
	tAGAIN  reduce 11
	tRETURN  reduce 11
	tTWEET  reduce 11
	tPOST  reduce 11
	tCELL  reduce 11
	tSWEEP  reduce 11
	tDO  reduce 11
	tDEFINE  reduce 11
	tPROCEDURE  reduce 11
	tBLOCKEND  reduce 11
	'!'  reduce 11
	'+'  reduce 11
	'-'  reduce 11
	'('  reduce 11
	's'  reduce 11
	'h'  reduce 11
	'f'  reduce 11
	'n'  reduce 11


state 46
	func : tDEFINE tPROCEDURE tIDENTIFIER tON . vars tAS block  (24)

	tPUBLIC  shift 1
	tUSE  shift 2
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error

	var  goto 51
	qualif  goto 52
	vars  goto 60
	type  goto 54
	small  goto 16
	huge  goto 17
	fake  goto 18


state 47
	func : tDEFINE tPROCEDURE tIDENTIFIER tAS . block  (23)

	tBLOCKBEGIN  shift 61
	.  error

	block  goto 62


state 48
	func : tDEFINE qualif tPROCEDURE tIDENTIFIER . tAS block  (25)
	func : tDEFINE qualif tPROCEDURE tIDENTIFIER . tON vars tAS block  (26)

	tON  shift 63
	tAS  shift 64
	.  error


state 49
	func : tDEFINE qualif type tFUNCTION . tIDENTIFIER tAS block  (21)
	func : tDEFINE qualif type tFUNCTION . tIDENTIFIER tON vars tAS block  (22)

	tIDENTIFIER  shift 65
	.  error


state 50
	func : tDEFINE type tFUNCTION tIDENTIFIER . tAS block  (19)
	func : tDEFINE type tFUNCTION tIDENTIFIER . tON vars tAS block  (20)

	tON  shift 66
	tAS  shift 67
	.  error


state 51
	vars : var .  (67)

	.  reduce 67


state 52
	var : qualif . type tIDENTIFIER  (34)
	var : qualif . type tIDENTIFIER '(' tINITIALLY expr ')'  (36)

	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error

	type  goto 68
	small  goto 16
	huge  goto 17
	fake  goto 18


state 53
	func : tPROCEDURE tIDENTIFIER tUSES vars .  (16)
	vars : vars . ',' var  (68)

	','  shift 69
	$end  reduce 16
	tINTEGER  reduce 16
	tDOUBLE  reduce 16
	tNULL  reduce 16
	tIDENTIFIER  reduce 16
	tSTRING  reduce 16
	tPUBLIC  reduce 16
	tUSE  reduce 16
	tINPUT  reduce 16
	tIF  reduce 16
	tASSIGN  reduce 16
	tSTOP  reduce 16
	tAGAIN  reduce 16
	tRETURN  reduce 16
	tTWEET  reduce 16
	tPOST  reduce 16
	tCELL  reduce 16
	tSWEEP  reduce 16
	tDO  reduce 16
	tDEFINE  reduce 16
	tPROCEDURE  reduce 16
	tBLOCKEND  reduce 16
	'!'  reduce 16
	'+'  reduce 16
	'-'  reduce 16
	'('  reduce 16
	's'  reduce 16
	'h'  reduce 16
	'f'  reduce 16
	'n'  reduce 16


state 54
	var : type . tIDENTIFIER  (33)
	var : type . tIDENTIFIER '(' tINITIALLY expr ')'  (35)

	tIDENTIFIER  shift 31
	.  error


state 55
	func : qualif tPROCEDURE tIDENTIFIER tUSES . vars  (18)

	tPUBLIC  shift 1
	tUSE  shift 2
	's'  shift 5
	'h'  shift 6
	'f'  shift 7
	'n'  shift 8
	.  error
